kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: de-design-library
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/default-backend: nginx-ingress-default-backend
spec:
  tls:
  - secretName: sasdigital-io-tls
  rules:
  - host: de-design-library.sasdigital.io
    http:
      paths:
      - backend:
          serviceName: de-design-library
          servicePort: 80
